# interview-preparation-app

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/core/: errors.py  security.py
backend/app/db/: supabase.py
backend/app/routers/: answers.py  auth.py  interview.py  progress.py  questions.py  videos.py
backend/app/schemas/: answer.py  auth.py  progress.py  question.py  video.py
backend/app/services/: gamification.py  gemini_client.py  youtube_client.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts  supabase.ts
